style.css
@import url('https://fonts.googleapis.com/css?family=Open Sans');

html {
    background: #F6F7F9;
}

body {
    font-family: 'Open Sans', sans-serif;
    margin: 0;
}

button {
    border: none;
}

.storage-container {
    display: flex;
    flex-direction: column;
    border: .0625rem solid #ECEEEF;
    border-radius: .625rem;
    background: #FFF;
    height: calc(100vh - 80px);
    margin: 24px;
}

.header {
    display: flex;
    align-items: center;
    padding: 0 24px;
    margin: 0;
    height: 72px;
    color: #43525C;
    font-family: sans-serif;
    font-size: 1.5rem;
}

.storage-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 16px 24px;
    border-top: .0625rem solid #ECEFF2;
    border-bottom: .0625rem solid #ECEFF2;
}

.file-title {
    display: flex;
    font-size: 20px;
    font-weight: 600;
    align-items: center;
    color: #3E5462;
    font-weight: 700;
}

.search-container {
    display: flex;
    align-items: center;
    gap: .625rem;
}

.search-bar {
    width: 14rem;
    height: 2.5rem;
    border-radius: .375rem;
    padding: 0 .5rem;
    border: .0625rem solid #DBE1E5;
}

.search-bar:hover {
    border-color: #1976D2;
}

.search-bar:active {
    box-shadow: 0 0 0 .25rem #D9EBFF;
}

.add-button {
    background-color: #1976D2;
    border-radius: .375rem;
    padding: .625rem;
    color: #FFFFFF;
    align-items: center;
    justify-content: center;
    height: 2.625rem;
    transition: 0.3s;
}

.add-button:hover {
    background-color: #004FAA;
    cursor: pointer;
}

.add-button:active {
    background-color: #003B71;
}

.add-new {
    font-size: 14px;
    color: #FFFFFF;
}

.file-table {
    font-size: 16px;
    color: #3E5462;
    border-spacing: 0px;
}

.action-td {
    display: flex;
    border: 1px solid;
}

tr {
    display: grid;
    grid-template-columns: auto 1fr 200px 176px 128px 112px;
    text-align: left;
    align-items: center;
    height: 48px;
    border-bottom: .0625rem solid #ECEFF2;
}

.checkbox-th {
    display: flex;
    align-items: center;
    padding: 0 16px 0 24px;
    height: 100%;
}

.checkbox {
    display: flex;
    align-items: center;
    justify-content: center;
    -webkit-appearance: none;
    appearance: none;
    border-radius: 4px;
    height: 16px;
    width: 16px;
    border: 1px solid #3E5462;
    cursor: pointer;
}

.checkbox:hover {
    border-color: #1976D2;
    outline-style: solid;
    outline-width: 2px;
    outline-color: #D9EBFF;
}

.checkbox:active {
    border-color: #1976D2;
    outline-width: 4px;
    outline-color: #D9EBFF;
}

.checkbox:checked {
    background-color: #1976D2;
    border: 1px solid #1976D2;
}

.checkbox:checked::after {
    content: url('assets/check.svg');
}

.checkbox:checked:active {
    background-color: #003B71;
    border: 1px solid #003B71;
}

.table-row:hover {
    cursor: pointer;
    background-color: #F6F7F9;
}

.action-content {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 32px;
    height: 32px;
    border-radius: 4px;
    transition: .3s;
}

.action-content:hover {
    background-color: #DBE1E5;
}

.pagination-container {
    display: flex;
    justify-content: right;
    padding: 16px 24px;
    border-top: 1px solid #ECEFF2;
}

ul {
    display: flex;
    margin: 0;
    color: #3E5462;
    font-size: 14px;
}

li {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 24px;
    height: 24px;
    margin-right: 4px;
}

.number-page {
    width: max-content;
}

